# aaaos-esp32-base

./: .gitignore  README.md
sources/: CMakeLists.txt  sdkconfig  sdkconfig.old
sources/main/: CMakeLists.txt
sources/main/aaa/: aaa.c  aaa.h  aaa_log.h
sources/main/app/: MqttConnection.cpp  MqttConnection.h  app.cpp  app.h  app_log.h  console.cpp  task_cloud.cpp  task_cloud.h  task_console.cpp  task_console.h  task_device.cpp  task_device.h  task_list.cpp  task_list.h  task_net.cpp  task_net.h  task_ota.cpp  task_ota.h  task_ui.cpp  task_ui.h
sources/main/common/: cmd_line.c  cmd_line.h  utils.c  utils.h
sources/main/driv/: EmonLib.cpp  EmonLib.h  button.c  button.h  thermistor.cpp  thermistor.h
sources/main/sys/: sys_io.c  sys_io.h  sys_log.c  sys_log.h
